通过无障碍访问实现如影旋钮事件系统的捕获、模拟三大金刚键

--- a/example/android/app/src/main/res/xml-v18/accessibilityservice.xml
+++ b/example/android/app/src/main/res/xml-v18/accessibilityservice.xml
@@ -4,6 +4,7 @@
     android:accessibilityFeedbackType="feedbackVisual"
     android:accessibilityFlags="flagRequestFilterKeyEvents"
     android:canRetrieveWindowContent="true"
+    android:canRequestFilterKeyEvents="true"
     android:notificationTimeout="100"
     >
 </accessibility-service>
